# minos-reports

./: Dockerfile-api  Dockerfile-ui  README.md
.github/workflows/: Publish.yml  Tests.yml
api/: README.md  pyproject.toml
api/src/minosreports/: api.py  cloudflare_access.py  constants.py  context.py  entrypoint.py
api/src/minosreports/alembic/: env.py
api/src/minosreports/alembic/versions/: 3153a01b2941_add_station_kind.py  4af09bee8e75_add_food_restrict_to_volunteers.py  4dd480915a98_add_volunteer_status.py  644a6aca09e0_add_volunteer_dlus_department.py  6f231de78a88_enrich_volunteer_data.py  6f79de9c116e_add_more_shifts_details.py  7b5ee2b93cde_change_datetime_column.py  a5c9c17127de_enrich_volunteer_data_further.py  b1c0eca737ad_add_mission_restrict_to_volunteers.py  be5106991260_initial_tables.py  d12f0662bc0b_add_assignement_comments.py
api/src/minosreports/db/: __init__.py  initializer.py  models.py
api/src/minosreports/parsing/: affectations.py  volontaires.py
api/tests/: test_dummy.py
backend/: pyproject.toml
backend/src/minosreports/: __main__.py  alembic.ini  api.py  context.py
backend/src/minosreports/alembic/versions/: 767093e9ae24_create_initial_tables.py  be5106991260_initial_tables.py
backend/src/minosreports/db/: __init__.py  initializer.py  models.py
dev/: Caddyfile_dev  Caddyfile_prod  config_dev.json  config_prod.json  docker-compose.yml
dev/minosreports_ui_dev/: Dockerfile
dev/postgres-initdb/: init-test-db.sql
ui/: eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
ui/public/: .gitignore  config.json
ui/src/: App.vue  config.ts  constants.ts  main.ts  utils.ts
ui/src/components/: AbbreviationSummary.vue  ErrorDisplay.vue  FreeBuzyDay.vue  HeaderBar.vue  Manques1Shift.vue  ManquesShift.vue  ManquesShiftDetail.vue  ManquesShiftTotal.vue  MissionsDetails.vue  Report1Assignement.vue  Report1Shift.vue  Report1Station.vue  ShiftAssignment.vue  ShiftEmptyAssignment.vue  StationKind.vue  StationsKind.vue  VacationsAssignement.vue  VacationsShift.vue  VolunteerArrived.vue  VolunteerDlus.vue  VolunteerDlusVacation.vue  VolunteerLabel.vue  VolunteerMissions.vue  VolunteerShift.vue  VolunteerShiftMate.vue
ui/src/components/__tests__/: ErrorDisplay.spec.ts  HeaderBar.spec.ts
ui/src/plugins/: vuetify.ts
ui/src/router/: index.ts
ui/src/stores/: main.ts
ui/src/types/: main.ts
ui/src/views/: DataView.vue  FreeBuzyView.vue  HomeView.vue  Manques1View.vue  ManquesView.vue  MissionsView.vue  Report1View.vue  RestrictionsView.vue  ShiftView.vue  VacationsView.vue  VolunteerView.vue  VolunteersDlusView.vue  VolunteersView.vue
